# llm-geo-tool-agent

./: .env.sample  .gitignore  README.md  agent.py  app.py  config.ini  config.py  drawmap.py  hotels_model.py  paths.py  pyproject.toml  requirements.txt  tool_utils.py  tools.py  utils.py
.streamlit/: secrets.toml.sample
agents/: __init__.py  agent_tool_selector.py  agents.py  comparison_geo_agent.py  geo_agent.py  lg_tool_agent.py  prompts.py  tool_selector.py
agents/graphs/: comparison_geo_graph.py  filtering_graph.py  geo_graph.py  tool_selector_graph.py
agents/tool_filters/: base.py  geospatial.py  registry.py  semantic.py
assets/js/: handleAddDrawing.js  handleRemoveDrawing.js
config/: project_paths.py  wfs.py  wms.py
data/: osm_tag_descriptions.json
experiments/: langsmith_feedback.ipynb
models/: hotels_model.py
resources/: example_questions.txt
saved_models/: hotels_cbm
schemas/: data.py  remapping.py
src/: app.py
src/agents/: __init__.py  agents.py  prompts.py
src/config/: project_paths.py
src/models/: hotels_model.py
src/schemas/: geometry.py
src/tools/: __init__.py  eurostat.py  (+6 more)
tools/: __init__.py  base.py  eurostat.py  eurostat_tool.py  hotel_suitability.py  hotel_suitability_tool.py  land.py  land_tools.py  openmeteo.py  openmeteo_tool.py  poi.py  spoi_tool.py  temperature.py  temperature_tools.py  tourism.py  tourism_tool.py
utils/: agent.py  agent_utils.py  geometry_utils.py  map_service.py  map_service_utils.py  openmeteo_utils.py  streamlit.py  streamlit_utils.py  tool.py  tool_utils.py
visualizations/: drawmap.py
(+19 files in other folders)
